--- a/style.css
+++ b/style.css
@@ -174,7 +174,11 @@ code {
   text-align: center;
 }
 
-text {
+/* text {
+  user-select: none;
+} */
+
+.svgText {
   cursor: move;
   user-select: none;
 }
