--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ code {
   /* margin: 0 auto; */
   /* display: flex; */
   /* justify-content: center; */
+  /* width: 1.26in;
+  height: 0.9in; */
 }
 #barcode {
   text-align: center;
